<resources>
    <string name="app_name">TheCaffeShop</string>
    <string name="landing_page_description">Start now with your account to order the best coffee in town.</string>
    <string name="title_activity_user_home">UserHomeActivity</string>
    <string name="title_activity_admin_home">AdminHomeActivity</string>
    <string name="title_user_home">Home</string>
    <string name="title_store">Store</string>
    <string name="title_orders">Orders</string>
    <string name="title_profile">Profile</string>
    <string name="home_page_title">Welcome</string>
    <string name="home_page_description">Start below by searching through our amazing and tasteful menu.</string>
    <string name="home_orders_title">Your ongoing orders:</string>
    <string name="store_page_title">Menu</string>
    <string name="orders_page_title">Your orders</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="comments_title">Comments</string>
    <string name="profile_page_title">Your profile</string>
    <string name="profile_email_text">Email</string>
    <string name="profile_username_text">Username</string>
    <string name="profile_fullname_text">Full name</string>
    <string name="profile_phone_text">Phone</string>
    <string name="logout_btn_title">Do logout</string>
    <string name="title_admin_orders">Manage orders</string>
    <string name="title_admin_products">Manage products</string>
    <string name="title_admin_users">Manage users</string>
    <string name="title_admin_profile">Profile</string>
    <string name="cart_title">Your cart</string>
    <string name="go_to_cart_btn">Go to cart</string>
    <string name="submit_order">Make an order</string>
    <string name="manage_products">Manage Products</string>
    <string name="edit_product">Edit Product</string>
    <string name="order_payment_btn">Make payment</string>
    <string name="order_cancel_btn">Cancel order</string>
    <string name="order_filter_placeholder">All orders</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_product">Create Product</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete Product</string>
    <string name="collect">Collect</string>
    <string name="update_product">Update Product</string>
    <string name="preparing">Preparing</string>
    <string name="admin_orders_page_title">Manage Orders</string>
    <string name="admin_users_page_title">Manage Users</string>
    <string name="update_order">Update Order</string>
    <string name="back">Back</string>
    <string name="edit_user">Edit User</string>
    <string name="title_admin_user">Manage User</string>
    <string name="delete_user">Delete User</string>
</resources>