<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_admin_orders"
        android:icon="@drawable/baseline_checklist_24"
        android:title="@string/title_admin_orders" />

    <item
        android:id="@+id/navigation_admin_users"
        android:icon="@drawable/baseline_assignment_ind_24"
        android:title="@string/title_admin_users" />

    <item
        android:id="@+id/navigation_admin_products"
        android:icon="@drawable/baseline_local_grocery_store_24"
        android:title="@string/title_admin_products" />

    <item
        android:id="@+id/navigation_admin_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/title_admin_profile" />

</menu>