<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_navigation"
    app:startDestination="@+id/navigation_admin_orders">

    <fragment
        android:id="@+id/navigation_admin_orders"
        android:name="com.example.thecaffeshop.ui.adminOrders.AdminOrdersFragment"
        android:label="@string/title_admin_orders"
        tools:layout="@layout/fragment_admin_orders" />

    <fragment
        android:id="@+id/navigation_admin_users"
        android:name="com.example.thecaffeshop.ui.adminUsers.AdminUsersFragment"
        android:label="@string/title_admin_users"
        tools:layout="@layout/fragment_admin_users" />

    <fragment
        android:id="@+id/navigation_admin_products"
        android:name="com.example.thecaffeshop.ui.adminProducts.AdminProductsFragment"
        android:label="@string/title_admin_products"
        tools:layout="@layout/fragment_admin_products" />

    <fragment
        android:id="@+id/navigation_admin_profile"
        android:name="com.example.thecaffeshop.ui.adminProfile.AdminProfileFragment"
        android:label="@string/title_admin_profile"
        tools:layout="@layout/fragment_admin_profile" />
</navigation>