<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingBottom="70dp"
        tools:context=".ui.adminOrders.AdminOrderFragment">

        <TextView
            android:id="@+id/order_orderId"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="ID"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/order_datetime"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="date time" />

        <ListView
            android:id="@+id/order_products"
            android:layout_width="match_parent"
            android:layout_height="235dp"
            android:layout_marginBottom="12dp"
            android:padding="12dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/order_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="status"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/order_payment_amount"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="payment amount" />

        <RadioGroup
            android:id="@+id/OrderStatusGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <RadioButton
                android:id="@+id/preparingRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preparing" />
            <RadioButton
                android:id="@+id/collectRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/collect" />

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:layout_marginTop="20dp"
            android:id="@+id/order_update_status"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_order"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/order_back"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:backgroundTint="@android:color/black" />



    </LinearLayout>
</ScrollView>